<resources>
    <string name="app_name">Test App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Current User</string>
    <string name="nav_header_subtitle">usermail@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_change">Изменить</string>
    <string name="menu_sort">Сортировать</string>
    <string name="menu_sort_name_inc">По имени возр.</string>
    <string name="menu_sort_name_dec">По имени уб.</string>
    <string name="menu_sort_date_inc">По дате возр.</string>
    <string name="menu_sort_date_dec">По дате уб.</string>
    <string name="menu_sort_sum_inc">По сумме возр.</string>
    <string name="menu_sort_sum_dec">По сумме уб.</string>
    <string name="textView_welcome">Мое приложение</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_popup_add1">Добавить элемент типа 1</string>
    <string name="menu_popup_add2">Добавить элемент типа 2</string>
    <string name="toast_settings_description">Настройки</string>
    <string name="nav_menu_profile">Мой профиль</string>
    <string name="nav_menu_about">О программе</string>
    <string name="nav_menu_contacts">Контакты</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="send_sms">Send sms</string>
    <string name="nav_menu_site">Сайт программы</string>
    <string name="homepage">Homepage</string>
    <string name="ok" translatable="false">OK</string>
    <string name="button_start_service_name">Запуск service</string>
    <string name="button_start_async_name">Запуск Async</string>
    <string name="weather_sunny">https://purepng.com/public/uploads/large/purepng.com-sunsunlightrayssolar-1411527180623fxabq.png</string>
    <string name="weather_clear_night">https://avatanplus.com/files/resources/original/575ef186963081554adf75d7.png</string>
    <string name="weather_foggy">https://teamninja-studio.com/doa6/us/images/common/cloud002.png</string>
    <string name="weather_cloudy">https://purepng.com/public/uploads/large/purepng.com-small-single-cloudcloudskycloudyclearskynature-221519326618duicg.png</string>
    <string name="weather_rainy">https://ya-webdesign.com/images/beads-vector-water-1.png</string>
    <string name="weather_snowy">https://www.proza.ru/pics/2018/11/28/1171.jpg</string>
    <string name="weather_thunder">http://pluspng.com/img-png/png-thunder-lightning-nd-thunder-by-xxhazukiixx-900.png</string>
    <string name="weather_drizzle">http://pngimg.com/uploads/water/water_PNG3293.png</string>
    <string name="place_not_found">Place not found</string>
    <string name="change_city">Change city</string>
    <string name="nav_menu_main">Главная</string>
    <string name="menu_change_city">Выбрать город</string>
    <string name="change_city_default">Сохранить указанный город по умолчанию?</string>
    <string name="textviewPress">Нажимай на кружок, читай датчики</string>
    <string name="nav_weather_history">История погоды</string>
    <string name="textView_weather_history">Выберите город из списка для просмотра истории</string>
    <string name="menu_weather_geo">Погода по геолокации</string>
</resources>
