<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/nav_menu_main" />
        <item
            android:id="@+id/nav_weather_history"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/nav_weather_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_menu_about" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/nav_menu_contacts" />
        <item
            android:id="@+id/nav_site"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_menu_site" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
